# solar-calendar-events

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: audit.yml  deploy.yaml  test.yaml
src/: lib.rs
tests/: solar-calendar-events.rs
