[package]
name = "solar-calendar-events"
description = "A library for calculating Equinoxes and Solstices"
authors = ["Johan Thorén <johan@thoren.xyz>"]
readme = "README.md"
license = "ISC"
repository = "https://github.com/johanthoren/solar-calendar-events"
version = "0.1.2"
edition = "2021"
keywords = ["astronomy", "calendar", "equinox", "solstice", "julian"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = {version = "0.3.20", features = ["macros"]}
