[package]
name = "solar-calendar-events"
description = "Calculate Equinoxes and Solstices for years between 1900 and 2100"
authors = ["Johan Thorén <johan@thoren.xyz>"]
readme = "README.md"
license = "ISC"
repository = "https://github.com/johanthoren/solar-calendar-events"
version = "0.1.4"
edition = "2021"
keywords = ["astronomy", "calendar", "equinox", "solstice", "julian"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
thiserror = "1.0.64"
